# IA_Agent

./: .env.example  .gitignore  AI_Agent.ipynb  ML_Cash_Flow_Prediction_5_Years.ipynb  ML_Earnings_Prediction_5_Years.ipynb  Predict cash flow (old).ipynb  README.md  earnings_model_usage.ipynb  ffcf_model_usage.ipynb  program.ipynb  program.py  requirements.txt  ricequant_factor_names.txt  run_model.ipynb  孤立森林 DBSCAN 3sigma法则.ipynb  预测收益 5年.ipynb  预测现金流 1年.ipynb  预测现金流 5年.ipynb
investment-advisor-agent/: DATA_STORAGE.md  README.md  WORKFLOW.md  pyproject.toml
investment-advisor-agent/agents/: __init__.py  ai_analysis_report.py  data_freshness.py  data_provider.py  data_snapshot.py  dcf_analysis_adapter.py  fundamental_agent.py  llm_utils.py  local_data_store.py  macro_agent.py  mcp_client.py  relative_valuation_adapter.py  rqdata_store.py  sentiment_agent.py  technical_agent.py
investment-advisor-agent/akshare_mcp_server/: __init__.py  __main__.py  cache.py  rate_limiter.py  server.py
investment-advisor-agent/akshare_mcp_server/tools/: __init__.py  fundamental.py  macro.py  price_volume.py  sector.py  sentiment.py
investment-advisor-agent/config/: settings.py
investment-advisor-agent/investment_advisor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
investment-advisor-agent/models/: __init__.py
investment-advisor-agent/orchestrator/: decision_agent.py  planner.py  risk_filter.py  scheduler.py
investment-advisor-agent/tests/: test_agents.py  test_core.py  test_integration.py
investment-advisor-agent/ui/: app.py
(+32 files in other folders)
