[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-advisor-agent"
version = "0.1.0"
description = "AI Investment Advisor Agent powered by AKShare data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.14.0",
    "beautifulsoup4>=4.12.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "langgraph>=1.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "rqdatac>=3.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["akshare_mcp_server*", "agents*", "orchestrator*", "models*", "config*"]

[tool.ruff]
line-length = 88
target-version = "py310"
